added poisson pseudocode

--- a/Bootstrap/bootstrap_poisson.ipynb
+++ b/Bootstrap/bootstrap_poisson.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,12 @@
     "        res.append(weighted_mean)\n",
     "    return np.array(res)\n",
     "\n",
+    "def poisson_bootstrap_preweighted(a:np.ndarray, weights:np.ndarray):\n",
+    "    weights_sum = np.sum(weights, axis=1)\n",
+    "    a_weighted = a * weights\n",
+    "    weighted_mean = np.sum(a_weighted, axis=1) / weights_sum\n",
+    "    return weighted_mean\n",
+    "\n",
     "def ci(diffs: np.ndarray, alpha: float = 0.05, **kwargs):\n",
     "    # -> tuple[tuple[float, float], bool]:\n",
     "    \"\"\"Return a sampling with replacement with given number of iterations\n",
@@ -65,23 +71,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = np.random.normal(10, 2, 100_000)"
+    "DATASET_SIZE = 500_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = np.random.normal(10, 2, DATASET_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vanilla bootstrap (9.989096122954017, 10.014304152002024)\n"
+      "Vanilla bootstrap (9.992997150340356, 10.004097500424876)\n"
      ]
     }
    ],
@@ -92,20 +107,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poisson bootstrap (9.989039863858277, 10.013947631627973)\n"
+      "Poisson bootstrap (9.992943040141007, 10.004210535657265)\n"
      ]
     }
    ],
    "source": [
     "poisson_bs = poisson_bootstrap(dataset)\n",
     "print('Poisson bootstrap', ci(poisson_bs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_weights = np.random.poisson(1, size=(1_000, len(dataset)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poisson bootstrap (9.992943040141007, 10.004210535657265)\n"
+     ]
+    }
+   ],
+   "source": [
+    "poisson_bs_preweighted = poisson_bootstrap_preweighted(dataset, pre_weights)\n",
+    "print('Poisson bootstrap', ci(poisson_bs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Примерная имплементация в Spark\n",
+    "1. Единожды рассчитываем и сохраняем табличку с полями |bootstrap_iteration|item_idx|poisson_weight|. Максимальный item_idx можно задать, например, в 1М.\n",
+    "2. Когда приходит время, собираем табличку с полями |item|metric_to_assess|\n",
+    "3. В табличке из п.2 собираем поле item_hash как hash(concatenate(item, test_name, metric_name))\n",
+    "4. В табличке из п.2 собираем поле item_idx как индекс строки после сортировки по полю item_hash\n",
+    "5. Делаем Join двух табличек по полю item_idx\n",
+    "6. Домножаем metric_to_assess на poisson_weight. Получаем weighted_metric\n",
+    "7. Делаем GroupBy сджойненной таблички по полю bootstrap_iteration, считаем сумму weighted_metric и сумму poisson_weight\n",
+    "8. Считаем поле final_metric как sum(weighted_metric) / sum(poisson_weight)"
    ]
   }
  ],
